<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dk.itu.chomsky.configurator.MainActivity">

    <TextView
        android:text="@string/textviewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        tools:text="@string/textviewTitle"
        android:textAlignment="center" />

    <TextView
        android:text="@string/monitor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewLabel1"
        android:layout_below="@+id/textViewTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="normal|bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/textViewLabel1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp">

        <Button
            android:text="@string/architecture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="46dp"
            android:id="@+id/buttonMonitorArch" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/buttonMonitorArch"
            android:layout_alignEnd="@+id/buttonMonitorArch"
            android:layout_marginTop="226dp">

            <RadioButton
                android:text="@string/_23_hp_curved_2000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton1"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_weight="1"
                android:textSize="18sp" />

            <RadioButton
                android:text="@string/_19_asus_widescreen_1000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton3"
                android:layout_weight="1"
                android:layout_below="@+id/radioGroup"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="18sp" />

            <RadioButton
                android:text="@string/_22_asus_1000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton2"
                android:layout_below="@+id/radioButton1"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_weight="1"
                android:textSize="18sp" />

            <RadioButton
                android:text="@string/_19_asus_800"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton4"
                android:layout_below="@+id/radioButton3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_weight="1"
                android:textSize="18sp" />

        </RadioGroup>

    </RelativeLayout>

</RelativeLayout>
