<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cpu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dk.itu.chomsky.configurator.CPUActivity">

    <TextView
        android:text="@string/cpu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewLabel3"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textViewLabel3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp">

        <Button
            android:text="@string/ram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="41dp"
            android:id="@+id/buttonCpuRam"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="51dp"
            android:layout_marginEnd="51dp"
            tools:ignore="RelativeOverlap" />

        <Button
            android:text="@string/motherboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="39dp"
            android:layout_marginStart="39dp"
            android:id="@+id/buttonCpuMb"
            android:layout_alignBaseline="@+id/buttonCpuRam"
            android:layout_alignBottom="@+id/buttonCpuRam"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="57dp"
            android:layout_marginStart="57dp"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/buttonCpuMb"
            android:layout_alignStart="@+id/buttonCpuMb"
            android:layout_marginTop="114dp">

            <RadioButton
                android:text="@string/_2_3_ghz_i5_intel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton8"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/_2_2_ghz_i7_intel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton9"
                tools:ignore="UnknownId"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/_2_8_ghz_athlon_x4_amd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton10"
                tools:ignore="UnknownId"
                android:layout_weight="1" />
        </RadioGroup>

    </RelativeLayout>
</RelativeLayout>
